--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -70,6 +70,7 @@
         width: 35%;
         text-align: center;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         .modalimage-exhib {
             min-width: 80px;
@@ -116,6 +117,7 @@
     }
     .job-location-container {
         display: flex !important ;
+        flex-wrap: wrap;
         .job-container {
             width: 25%;
         }
@@ -267,15 +269,14 @@ a:hover {
             margin-top: 5%;
             text-align: center;
             .modalimage-exhib {
-                width: 30%;
+                width: 50%;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
             }
             .modal-title {
                 width: 70%;
-                padding-right: 5%;
-                padding-left: 5%;
+
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
