--- a/src/components/Map/BuildingSwitch/index.scss
+++ b/src/components/Map/BuildingSwitch/index.scss
@@ -2,18 +2,18 @@
 @import "../../../styles/_fonts";
 
 .buildingSwitchContainer {
+  justify-self: center;
+  align-self: flex-end;
+
   z-index: 100;
-  position: fixed;
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
   align-items: flex-end;
-  height: auto;
-  top: 2%;
-  left: 60px;
-  cursor: default;
+  height: min-content;
+  cursor: pointer;
   @keyframes select {
     from {
-      background-color: lightgray;
+      background-color: #eee;
       scale: 1;
     }
     to {
@@ -22,25 +22,35 @@
     }
   }
   .buildingSwitch {
-    background-color: lightgray;
-    padding: 6px;
-    box-shadow: 2px 2px rgba(0, 0, 0, 0.414);
+    background-color: #eee;
+    padding: 10px 15px;
+    border-color: #ccc;
+    border-top-width: 2px;
+    border-top-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
   }
   .buildingSwitch:hover {
-    background-color: #35ffbc;
+    opacity: 0.8;
+  }
+  .buildingSwitch:active {
+    opacity: 0.6;
   }
   #nymble {
     border-radius: 10px 0px 0px 10px;
-    padding-right: 20px;
+    border-left-width: 2px;
+    border-left-style: solid;
   }
   #library {
     border-radius: 0px 10px 10px 0px;
-    padding-left: 20px;
+    border-right-width: 2px;
+    border-right-style: solid;
   }
   .activeBuilding {
-    transform: scale(1.05);
     animation: select 0.5s ease-in-out 1 normal;
     background-color: $melon;
+    color: white;
     font-weight: bold;
+    border-color: darken($melon, 5%);
   }
 }
