--- a/src/components/Map/FloorButtons/index.scss
+++ b/src/components/Map/FloorButtons/index.scss
@@ -2,19 +2,22 @@
 @import "../../../styles/_fonts";
 
 .floorButtons {
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+
+  justify-self: center;
   z-index: 100;
-  position: fixed;
   display: inline-flex;
   flex-direction: column;
   align-items: flex-end;
   height: auto;
-  top: 18%;
-  right: 10px;
+  width: min-content;
+  row-gap: 10px;
 }
 .floorButton {
   display: inline-flex;
-  width: 30px;
-  height: 30px;
+  width: 45px;
+  height: 45px;
   text-align: center;
   background-color: #fff;
   border-radius: 100%;
@@ -23,24 +26,20 @@
   justify-content: center;
   flex-shrink: 0;
   align-items: center;
-  width: 5vw;
-  height: 5vw;
-  min-width: 32px;
-  min-height: 32px;
-  max-width: 40px;
-  max-height: 40px;
-  color: rgb(94, 178, 94);
+  color: #00d78f;
   font-weight: bold;
-  margin-bottom: 10px;
   cursor: pointer;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.407);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
-.floorButton:hover {
-  background-color: rgb(94, 178, 94);
-  color: #fff;
+.floorButton:hover,
+.floorButton:active {
+  background-color: white;
+  opacity: 0.6;
+  color: #00d78f;
 }
 
-.activeFloorButton {
-  background-color: rgb(94, 178, 94);
+.floorButton.activeFloorButton {
+  background-color: #00d78f;
   color: #fff;
+  opacity: 1;
 }
