--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -18,7 +18,7 @@
     cursor: pointer;
     width: 10%;
     height: 10%;
-    rotate: 180deg;
+    rotate: '180deg';
 }
 #expand-button:hover {
     color: $melon;
