--- a/src/components/Questionnaire/index.scss
+++ b/src/components/Questionnaire/index.scss
@@ -9,7 +9,7 @@
     border-color: black;
     border-radius: 50px;
     box-shadow: 1rem rgb(240, 236, 236);
-    z-index: 100;
+    z-index: 10000000;
     /*  overflow: scroll;
     scrollbar-width: thin; */
     //padding: 10%;
@@ -38,8 +38,8 @@
     padding: 20px;
     margin: 10px 0;
     width: 100%;
-    column-count: 2; /* Set the number of columns */
-    column-gap: 20px; /* Adjust the gap between columns */
+    column-count: 2;
+    column-gap: 20px;
 }
 
 .dropdown-button {
@@ -56,16 +56,16 @@
 
 .navigation-button {
     float: right;
-    margin-left: 10px; /* Add some margin between the buttons if needed */
+    margin-left: 10px;
 }
 
 .modal-close-btn {
-    //background-color: #f5f3f3; /* Red background color, you can change this */
+    //background-color: #f5f3f3;
     position: fixed;
     top: 5%;
     left: 88%;
     width: 0%;
-    color: #fff; /* White text color */
+    color: #fff;
     font-size: 20px;
     z-index: 100;
 }
