--- a/src/components/Countdown/index.scss
+++ b/src/components/Countdown/index.scss
@@ -7,6 +7,7 @@
     width: 500px;
     margin-left: auto;
     margin-right: auto;
+
     .happening {
         padding-top: 0.5em;
         color: #fff !important;
@@ -16,8 +17,8 @@
         .countdown-numbers {
             color: #fff;
             //font-weight: bold;
-            font-size: calc(40px + 0.8vw);
-            text-align: center;
+            font-size: 7vmin;
+            text-align: left;
             margin-top: 5px;
         }
 
@@ -32,7 +33,7 @@
         }
 
         .time-unit {
-            text-align: center;
+            text-align: left;
             line-height: 0;
             font-weight: bold;
             font-size: calc(10px + 0.6vw);
