--- a/src/layouts/Homepage/SquareButton/index.scss
+++ b/src/layouts/Homepage/SquareButton/index.scss
@@ -1,17 +1,41 @@
 @import '../../../styles/variables';
+@mixin buttonSquare {
+    display: inline-flex;
+    padding: 8px 36px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 0;
+    border: 3px solid #00d790;
+}
+@mixin whiteButton {
+    background: #fff;
+    color: $melon;
+}
 #buttons {
     button {
-        display: inline-flex;
-        padding: 8px 36px;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        border-radius: 0;
-        border: 4px solid #00d790;
+        @include buttonSquare();
     }
     #b3 {
-        background: #fff;
-        color: $melon;
+        @include whiteButton();
+    }
+}
+
+.buttonsJumbotron {
+    width: 100%;
+    left: 0;
+    display: flex;
+    button {
+        @include buttonSquare();
+        padding: 8px 20px;
+        font-size: max(3vmin, 15px);
+        height: 100%;
+        width: 100%;
+    }
+
+    #b3 {
+        @include whiteButton();
+        margin-left: 30px;
     }
 }
 
@@ -35,5 +59,11 @@
         button {
             font-size: 2.5vw;
         }
+    }
+}
+
+@media screen and (max-width: $breakpoint-mobile-flipped) {
+    .buttonsJumbotron {
+        display: none;
     }
 }
